includes angular/requirejs and foundation maps the bootstrap.js with requirejs configuration and angular bootstrapping

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-        
+        <link rel="stylesheet" type="text/css" href="public/foundation6.min.css">
+        <link rel="stylesheet" type="text/css" href="app/app.css">
+        <script data-main="app/bootstrap.js" src="public/require2.3.2.js"></script>
     </head>
     <body>
-        <h1>hi</h1>
     </body>
 </html>
